<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/newBackground"
    android:id="@+id/mainscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".mainScreen">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="@dimen/app_icon"
        android:layout_height="@dimen/app_icon"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="164dp"
        android:background="@mipmap/ic_launcher"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/newButtonColour"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:text="@string/version"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewVersion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="124dp"
        android:text="Created by: Jack Willmott"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/newButtonColour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes" />

    <Button
        android:id="@+id/stats"
        android:layout_width="175dp"
        android:layout_height="98dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="124dp"
        android:backgroundTint="@color/mainColour"
        android:drawableStart="@drawable/skill_icon_overall"
        android:onClick="statsActivity"
        android:text="@string/stats"
        android:textColor="@color/newBackground"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/search_ge"
        android:layout_width="175dp"
        android:layout_height="98dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/mainColour"
        android:drawableStart="@drawable/app_icon_gp"
        android:onClick="priceActivity"
        android:text="@string/price"
        android:textColor="@color/newBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/wiki"
        android:layout_width="175dp"
        android:layout_height="98dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/mainColour"
        android:drawableStart="@drawable/app_icon_search"
        android:onClick="wikiActivity"
        android:text="@string/wiki"
        android:textColor="@color/newBackground"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats" />

    <Button
        android:id="@+id/news"
        android:layout_width="175dp"
        android:layout_height="98dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/mainColour"
        android:drawableStart="@drawable/game_icon_bosses"
        android:onClick="newsActivity"
        android:text="@string/news"
        android:textColor="@color/newBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_ge" />

    <Button
        android:id="@+id/farm"
        android:layout_width="175dp"
        android:layout_height="98dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="132dp"
        android:backgroundTint="@color/mainColour"
        android:drawableStart="@drawable/skill_icon_herblore"
        android:onClick="farmActivity"
        android:text="@string/farm"
        android:textColor="@color/newBackground"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notes" />

    <Button
        android:id="@+id/notes"
        android:layout_width="175dp"
        android:layout_height="98dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/mainColour"
        android:drawableStart="@drawable/skill_icon_attack"
        android:onClick="combatActivity"
        android:text="@string/notes"
        android:textColor="@color/newBackground"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/news" />

    <Button
        android:id="@+id/map"
        android:layout_width="175dp"
        android:layout_height="98dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/mainColour"
        android:drawableStart="@drawable/game_icon_cluescrollsall"
        android:onClick="mapActivity"
        android:text="@string/map"
        android:textColor="@color/newBackground"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wiki" />

</androidx.constraintlayout.widget.ConstraintLayout>