<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pricedetailscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/newBackground">





    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:id="@+id/itemIcon"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/price_itemicon"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:layout_width="@dimen/p2p_icon"
                android:layout_height="@dimen/p2p_icon"
                android:id="@+id/itemP2P"
                android:layout_marginTop="10dp"
                android:layout_alignBottom="@id/itemIcon"
                android:layout_toEndOf="@id/itemIcon"
                android:contentDescription="@string/price_p2p"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_description"
                android:id="@+id/itemDescriptionHeader"
                android:layout_marginStart="@dimen/layout_margin_start"
                android:layout_below="@id/itemIcon"
                android:textColor="@color/mainColour"
                android:textSize="@dimen/page_header_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/itemDescription"
                android:layout_marginStart="@dimen/p2p_icon"
                android:layout_below="@id/itemDescriptionHeader"
                android:textColor="#ffffff"
                android:textSize="@dimen/page_text_size" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_current"
                android:id="@+id/itemPriceHeader"
                android:layout_marginTop="10dp"
                android:layout_marginStart="@dimen/layout_margin_start"
                android:layout_below="@id/itemDescription"
                android:textColor="@color/mainColour"
                android:textSize="@dimen/page_header_text_size"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/p2p_icon"
                android:layout_height="@dimen/p2p_icon"
                android:id="@+id/gpIcon"
                android:src="@drawable/app_icon_gp"
                android:layout_below="@id/itemPriceHeader"
                android:layout_marginStart="@dimen/p2p_icon"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:contentDescription="@string/price_current"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/itemPrice"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_below="@id/itemPriceHeader"
                android:layout_toEndOf="@id/gpIcon"
                android:textColor="#ffffff"
                android:textSize="@dimen/page_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changes"
                android:id="@+id/changes"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_below="@id/itemPrice"
                android:textColor="@color/mainColour"
                android:textSize="@dimen/page_text_size"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/p2p_icon"
                android:layout_height="@dimen/p2p_icon"
                android:id="@+id/changeTodayTrend"
                android:layout_below="@id/changes"
                android:layout_marginStart="@dimen/p2p_icon"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:contentDescription="@string/change_today"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/changeToday"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_below="@id/changes"
                android:layout_toEndOf="@id/changeTodayTrend"
                android:textColor="#ffffff"
                android:textSize="@dimen/page_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_today"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_below="@id/changes"
                android:layout_toEndOf="@id/changeToday"
                android:textColor="#ffffff"
                android:textSize="@dimen/page_text_size" />

            <ImageView
                android:layout_width="@dimen/p2p_icon"
                android:layout_height="@dimen/p2p_icon"
                android:id="@+id/change1MonthTrend"
                android:layout_below="@id/changeToday"
                android:layout_marginStart="@dimen/p2p_icon"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:contentDescription="@string/change_1_month"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/change1Month"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_below="@id/changeToday"
                android:layout_toEndOf="@id/change1MonthTrend"
                android:textColor="#ffffff"
                android:textSize="@dimen/page_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_1_month"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_below="@id/changeToday"
                android:layout_toEndOf="@id/change1Month"
                android:textColor="#ffffff"
                android:textSize="@dimen/page_text_size" />

            <ImageView
                android:layout_width="@dimen/p2p_icon"
                android:layout_height="@dimen/p2p_icon"
                android:id="@+id/change3MonthTrend"
                android:layout_below="@id/change1Month"
                android:layout_marginStart="@dimen/p2p_icon"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:contentDescription="@string/change_3_month"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/change3Month"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_below="@id/change1Month"
                android:layout_toEndOf="@id/change3MonthTrend"
                android:textColor="#ffffff"
                android:textSize="@dimen/page_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_3_month"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_below="@id/change1Month"
                android:layout_toEndOf="@id/change3Month"
                android:textColor="#ffffff"
                android:textSize="@dimen/page_text_size" />

            <ImageView
                android:layout_width="@dimen/p2p_icon"
                android:layout_height="@dimen/p2p_icon"
                android:id="@+id/change6MonthTrend"
                android:layout_below="@id/change3Month"
                android:layout_marginStart="@dimen/p2p_icon"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:contentDescription="@string/change_6_month"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/change6Month"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_below="@id/change3Month"
                android:layout_toEndOf="@id/change6MonthTrend"
                android:textColor="#ffffff"
                android:textSize="@dimen/page_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_6_month"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_below="@id/change3Month"
                android:layout_toEndOf="@id/change6Month"
                android:textColor="#ffffff"
                android:textSize="@dimen/page_text_size" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/alch_prices"
                android:id="@+id/alchPriceHeader"
                android:layout_marginTop="10dp"
                android:layout_marginStart="@dimen/layout_margin_start"
                android:layout_below="@id/change6Month"
                android:textColor="@color/mainColour"
                android:textSize="@dimen/page_header_text_size"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/p2p_icon"
                android:layout_height="@dimen/p2p_icon"
                android:id="@+id/highalchIcon"
                android:src="@drawable/app_icon_highalch"
                android:layout_below="@id/alchPriceHeader"
                android:layout_marginStart="@dimen/p2p_icon"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:contentDescription="@string/high_alch"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/highAlch"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_below="@id/alchPriceHeader"
                android:layout_toEndOf="@id/highalchIcon"
                android:textColor="#ffffff"
                android:textSize="@dimen/page_text_size" />

            <ImageView
                android:layout_width="@dimen/p2p_icon"
                android:layout_height="@dimen/p2p_icon"
                android:id="@+id/lowalchIcon"
                android:src="@drawable/app_icon_lowalch"
                android:layout_below="@id/highAlch"
                android:layout_marginBottom="@dimen/layout_margin_bottom"
                android:layout_marginStart="@dimen/p2p_icon"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:contentDescription="@string/low_alch"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/lowAlch"
                android:layout_marginBottom="@dimen/layout_margin_bottom"
                android:layout_marginStart="@dimen/layout_margin_left"
                android:layout_marginTop="@dimen/layout_margin_top"
                android:layout_below="@id/highAlch"
                android:layout_toEndOf="@id/lowalchIcon"
                android:textColor="#ffffff"
                android:textSize="@dimen/page_text_size" />

        </RelativeLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>